fix footer so it does not overlap address info

--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,7 @@ h2 {
 
 main {
     padding: 1.25em;
-    padding-bottom: 7em;
+    padding-bottom: 10em;
 }
 
 .intro {
